# SmartSploit

./: MODULE_DEVELOPMENT_GUIDE.md  app.py  models.py  pyproject.toml  replit.md  run_console.py
instance/: smartsploit.db
smartsploit/: __init__.py  main.py
smartsploit/core/: __init__.py  blockchain_interface.py  framework.py  module_manager.py  session_manager.py
smartsploit/data/: __init__.py  training_data.csv
smartsploit/interfaces/: __init__.py  console.py
smartsploit/interfaces/api/: __init__.py  routes.py
smartsploit/interfaces/web_ui/: __init__.py  app.py  routes.py
smartsploit/lib/: __init__.py  base_module.py  contract_analyzer.py  exploit_templates.py  ml_detector.py  utils.py
smartsploit/modules/: __init__.py
smartsploit/modules/auxiliary/: __init__.py
smartsploit/modules/auxiliary/analysis/: dynamic_analyzer.py  static_analyzer.py
smartsploit/modules/auxiliary/gather/: etherscan_crawler.py  github_crawler.py
smartsploit/modules/auxiliary/scanner/: __init__.py  contract_info.py  demo_scanner.py  network_scanner.py  vulnerability_scanner.py
smartsploit/modules/exploits/: __init__.py
smartsploit/modules/exploits/access_control/: __init__.py  delegatecall_injection.py  function_visibility.py  tx_origin.py
smartsploit/modules/exploits/business_logic/: __init__.py  flash_loan_attack.py
smartsploit/modules/exploits/defi/: __init__.py  sandwich_attack.py
static/css/: style.css
static/js/: dashboard.js
templates/: about.html  base.html  console.html  dashboard.html  modules.html  monitoring.html  sessions.html  settings.html
(+14 files in other folders)
